--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
-  "name": "lmkvs.ro",
+  "name": "covidtracker-web-app",
   "version": "1.0.0",
+  "description": "FII-CovidTracker Web Application",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/FII-CovidTracker/Web-App"
+  },
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -10,7 +15,7 @@
   "dependencies": {
     "leaflet": "^1.6.0",
     "moment": "^2.27.0",
-    "next": "latest",
+    "next": "10.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
