--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@zeit/next-css": "^1.0.1",
     "classnames": "^2.2.6",
     "file-loader": "^4.2.0",
+    "firebase": "^8.1.1",
+    "js-cookie": "^2.2.1",
     "leaflet": "^1.6.0",
     "moment": "^2.27.0",
     "next": "10.0.1",
@@ -26,7 +28,7 @@
     "primereact": "^5.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.13.1",
-    "react-icons": "^3.11.0",
+    "react-icons": "^4.1.0",
     "react-leaflet": "^2.7.0",
     "react-player": "^2.6.2",
     "react-router": "^5.2.0",
